[package]
name = "rubber"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = { version = "2.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"